working on authorization

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -15,7 +15,7 @@ intended publication of such source code.
 
     <div class="title" ng-if="resources.portalVersion">
       <span>{{"ABOUT.RELEASE" | translate}}</span>
-      <p>{{portalResourcesServiceService.portalResources.portalVersion}}</p>
+      <p>{{userSettingsService.portalResources.portalVersion}}</p>
     </div>
 
     <div class="main-text">
