--- a/src/app/components/Settings/user-settings/settings.component.less
+++ b/src/app/components/Settings/user-settings/settings.component.less
@@ -9,6 +9,32 @@
   padding: 0 10px;
   font-size: 12px;
 
+  .mat-select-panel{
+    position: absolute;
+    top: 32px;
+    left: 4px;
+    min-width: calc(100% + 22px) !important;
+    border-radius: 0px !important;
+    border: 1px solid blue;
+    border-top-style: none;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-outline-start{
+    border-radius: 0px !important;
+    border: 1px solid blue !important;
+    border-right-style: none !important;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-outline-end{
+    border-radius: 0px !important;
+    border: 1px solid blue !important;
+    border-left-style: none !important;
+  }
+
+  .mat-select-panel ng-animating {
+    visibility: hidden;
+  }
+
   .ngdialog-close {
     display: none;
     position: absolute;
@@ -132,6 +158,15 @@
       padding-left: 20px;
     }
 
+    .default-select{
+      ul {
+        min-width: 215px;
+        max-height: 400px;
+        overflow-y: auto;
+        color: white;
+      }
+    }
+
     .default-select,
     .default-input,
     .static {
@@ -143,12 +178,13 @@
       text-overflow: ellipsis;
       position: initial;
 
-      ul {
-        min-width: 215px;
-        max-height: 400px;
-        overflow-y: auto;
-      }
+      //ul {
+      //  min-width: 215px;
+      //  max-height: 400px;
+      //  overflow-y: auto;
+      //}
     }
+
     .default-input .error-input {
       border: 1px solid @highlight-1;
     }
@@ -285,6 +321,7 @@
     hyphens: auto;
     line-height: 20px;
     padding: 15px 3px 15px 10px;
+    cursor: pointer;
   }
 
   .mobile-accordeon .tab-content {
@@ -536,6 +573,53 @@
       .remove-item{
         display: inline-block;
       }
+    }
+  }
+
+  .reset-disable+span{
+    color: @blue-gray !important;
+    &::before{
+      border: 1px solid #dce1e6 !important;
+      box-shadow: none !important;
+    }
+  }
+}
+
+.recording-change-access-level{
+  display: flex;
+  flex-direction: column;
+  background: white;
+  max-width: 340px;
+
+  label{
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    margin: 30px 30px;
+    font-size: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+  }
+
+  .recording-change-access-level-buttons{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+
+    button{
+      display: block;
+      margin: 5px 30px 5px;
+      font-size: 14px;
+      background: @off-white;
+      border: 1px solid @blue-gray;
+      height: 32px;
+      padding: 0 32px;
+      border-radius: 16px;
+      overflow: hidden;
+      color: @blue-gray;
     }
   }
 }
