working on user settings and custom select

--- a/src/app/components/settings/user-settings/settings.component.less
+++ b/src/app/components/settings/user-settings/settings.component.less
@@ -152,6 +152,9 @@
       font-size: 12px;
       width: 180px;
       line-height: 18px;
+      padding-right: 5px;
+      display: inline-block;
+      vertical-align: middle;
     }
 
     &.tier-two>span {
