--- a/src/app/components/settings/templates/user-settings.component.html
+++ b/src/app/components/settings/templates/user-settings.component.html
@@ -41,7 +41,7 @@ intended publication of such source code.
         </div>
 
         <div class="tab password-settings-mobile settings-navigation-item {{currentTab === TAB.PASSWORD ? 'current' : ''}} {{userSettings.conferencing.localUser && !isOAuthUser ? '' : 'hidden'}}"
-             (click)="setCurrentTab(TAB.PASSWORD)">{{'SETTINGS.PASSWORD'}}
+             (click)="setCurrentTab(TAB.PASSWORD)">{{'SETTINGS.PASSWORD' | translate}}
         </div>
 
       </div>
@@ -105,12 +105,13 @@ intended publication of such source code.
               primary="lastName"
               secondary="firstName"
               tertiary="emailAddress"
-              [callback]="toInputChanged"
+              [callback]="toInputChanged.bind(this)"
               [options]="filteredContacts"
               uniqueProperty="userId"
               [isForParticipant]="false"
               [selected]="delegatedUsers"
               [isForUserSearch]="true"
+              (selectedChanged)="selectedChanged($event)"
               class="user-search"></app-tag-selector>
 
             <div class="user-delegated endpoints-wrapper">
@@ -128,25 +129,234 @@ intended publication of such source code.
              ng-include=":: 'app/components/settings/templates/SettingsRoom.html'">
         </div>
 
-        <div class="tab-content {{currentTab === TAB.GENERAL ? '' : 'hidden'}}"
-             ng-include=":: 'app/components/settings/templates/SettingsGeneral.html'">
+        <div class="tab-content {{currentTab === TAB.GENERAL ? '' : 'hidden'}}">
+<!--          -->
+          <div class="settings-item upc-display-name">
+            <span>{{'SETTINGS.GENERAL_TAB.USER_NAME' | translate}}</span>
+            <label class="static">{{userSettings.displayName}}</label>
+          </div>
+
+          <div class="settings-item upc-email">
+            <span>{{'SETTINGS.GENERAL_TAB.EMAIL' | translate}}</span>
+            <label class="static">{{userSettingsService.portalResources.self.email}}</label>
+          </div>
+
+          <div class="settings-item upc-first-name">
+            <span>{{'SETTINGS.GENERAL_TAB.FIRST_NAME' | translate}}</span>
+            <label class="static">{{userSettings.givenName}}</label>
+          </div>
+
+          <div class="settings-item  upc-last-name">
+            <span>{{'SETTINGS.GENERAL_TAB.LAST_NAME' | translate}}</span>
+            <label class="static">{{userSettings.surname}}</label>
+          </div>
+
+          <div class="settings-item upc-phone-office">
+            <span>{{'SETTINGS.GENERAL_TAB.PHONE_OFFICE' | translate}}</span>
+            <label class="static">{{userSettings.officePhoneNumber}}</label>
+          </div>
+
+          <div *ngFor="let mobilePhoneNumber of userSettings.mobilePhoneNumbers" class="settings-item  upc-phone-mobile">
+            <span>{{'SETTINGS.GENERAL_TAB.PHONE_MOBILE' | translate}}</span>
+            <label class="static">{{mobilePhoneNumber}}</label>
+          </div>
+
+          <div class="separator"></div>
+
+          <div class="settings-item upc-max-bandwidth">
+            <span>{{'SETTINGS.GENERAL_TAB.MAX_BANDWIDTH' | translate}}</span>
+            <label class="static">{{userSettings.conferencing.maxBandWidth}}
+              <span>{{'SETTINGS.GENERAL_TAB.KBPS' | translate}}</span>
+            </label>
+          </div>
+
+          <div class="settings-item upc-personal-endpoint">
+            <span>{{'SETTINGS.GENERAL_TAB.PERSONAL_ENDPOINT' | translate}}</span>
+            <label class="static">{{userSettings.conferencing.defaultTerminalId}}</label>
+          </div>
+
+          <div class="settings-item upc-allow-streaming">
+            <span>{{'SETTINGS.GENERAL_TAB.ALLOW_STREAMING' | translate}}</span>
+            <label class="static">{{userSettings.conferencing.allowStreaming | translate}}</label>
+          </div>
+
+          <div class="settings-item upc-allow-recording">
+            <span>{{'SETTINGS.GENERAL_TAB.ALLOW_RECORDING' | translate}}</span>
+            <label class="static">{{userSettings.conferencing.allowRecording | translate}}</label>
+          </div>
+
+          <div class="settings-item upc-my-groups">
+            <span>{{'SETTINGS.GENERAL_TAB.GROUPS' | translate}}</span>
+            <label class="static">
+              <span class="user-groups" *ngFor="let group of userSettings.conferencing.userGroups">{{group.name}}</span>
+            </label>
+          </div>
+
+          <div class="settings-item upc-schedulable">
+            <span>{{'SETTINGS.GENERAL_TAB.SCHEDULABLE' | translate}}</span>
+            <label class="static default-checkbox">
+              <input type="checkbox" disabled [ngModel]="userSettings.conferencing.schedulable">
+              <span></span>
+            </label>
+          </div>
+
+          <div class="settings-item upc-reservable">
+            <span>{{'SETTINGS.GENERAL_TAB.RESERVABLE' | translate}}</span>
+            <label class="static default-checkbox">
+              <input type="checkbox" disabled [ngModel]="userSettings.conferencing.reservable">
+              <span></span>
+            </label>
+          </div>
         </div>
 
-        <div class="tab-content {{currentTab === TAB.PREFERENCES ? '' : 'hidden'}}"
-             ng-include=":: 'app/components/settings/templates/SettingsPreferences.html'">
+<!---->
+        <div class="tab-content {{currentTab === TAB.PREFERENCES ? '' : 'hidden'}}">
+<!--          -->
+          <label class="default-checkbox use-browser-audio-video browser-checkbox preferences">
+            <input type="checkbox"
+                   [ngModel]="videoCalling"
+                   (change)="changePreferences()">
+            <span>{{'SETTINGS.PREFERENCES_TAB.VIDEO_CALLING' | translate}}</span>
+          </label>
+          <span class="explanation preferences">{{'SETTINGS.PREFERENCES_TAB.VIDEO_CALLING_EXPLANATION' | translate}}</span>
+
+
+          <div class="separator"></div>
+
+
+          <label class="default-checkbox use-browser-audio-video browser-checkbox preferences">
+            <input type="checkbox"
+                   [ngModel]="useDefaultTimeFormat"
+                   (change)="changeTimeFormat()">
+            <span>{{'SETTINGS.PREFERENCES_TAB.DEFAULT_FORMAT' | translate}}</span>
+          </label>
+          <div class="advanced-settings" *ngIf="!useDefaultTimeFormat">
+            <div class="settings-item upc-date-time-format">
+              <span>{{'SETTINGS.PREFERENCES_TAB.DATE_FORMAT_TITLE' | translate}}</span>
+              <app-custom-select (ngModelChange)="setDateFormat($event)" [model]="dateFormatSettings.selected" [options]="dateFormatSettings.options" key="format" value="format"></app-custom-select>
+            </div>
+            <label class="default-checkbox use-browser-audio-video browser-checkbox preferences upc-date-time-format">
+              <input type="checkbox"
+                     [ngModel]="use24HourFormat"
+                     (change)="changeHourFormat()">
+              <span>{{'SETTINGS.PREFERENCES_TAB.TIME_FORMAT' | translate}}</span>
+            </label>
+          </div>
+<!--          -->
         </div>
 
-        <div class="tab-content client-settings-mobile {{currentTab === TAB.CLIENT ? '' : 'hidden'}}"
-             ng-include=":: 'app/components/settings/templates/SettingsClient.html'">
+        <div class="tab-content client-settings-mobile {{currentTab === TAB.CLIENT ? '' : 'hidden'}}">
+<!--          -->
+          <div *ngIf="!ACData.isInstalled" class="no-client-info">
+            <span>{{'SETTINGS.CLIENT_TAB.NO_CLIENT' | translate}}</span>
+          </div>
+
+          <div *ngIf="ACData.isInstalled" class="client-title">{{'SETTINGS.CLIENT_TAB.CLIENT_INFO' | translate:ACData}}</div>
+
+          <div *ngIf="ACData.isInstalled" class="remove-client-info" (click)="removeClientInfo()">
+            {{'SETTINGS.CLIENT_TAB.REMOTE_INFO' | translate}}
+          </div>
+
+          <div class="default-button client-download-button"
+               *ngIf="(!ACData.isInstalled || needOptionalUpgrade()) && globalService.isThereClientToDownload()"
+               (click)="downloadAC()"
+          >
+            <span>{{'SETTINGS.CLIENT_TAB.DOWNLOAD_AC' | translate:ACData.latestVersion}}</span>
+          </div>
+
+          <div *ngIf="!globalService.isThereClientToDownload()" class="client-title">{{'GENERAL.DOWNLOAD.NO_CLIENT' | translate}}</div>
+
+          <div *ngIf="isChrome && showSharingPlaginLink"
+               class="download-plugin"
+               (click)="downloadChromePlugin()">{{'SETTINGS.CLIENT_TAB.DOWNLOAD_CHROME_PLUGIN' | translate}}
+          </div>
+<!--          -->
         </div>
 
-        <div class="tab-content {{currentTab === TAB.SUPPORT ? '' : 'hidden'}}"
-             ng-include=":: 'app/components/settings/templates/SettingsSupport.html'">
+        <div class="tab-content {{currentTab === TAB.SUPPORT ? '' : 'hidden'}}">
+<!--          -->
+          <label class="default-checkbox use-browser-audio-video browser-checkbox preferences" (click)="changeSaveLogs()">
+            <input type="checkbox"
+                   [ngModel]="saveLogsCheckbox"
+                   [disabled]="saveLogsCheckbox"
+                   [class.reset-disable]="saveLogsCheckbox"
+            >
+            <span>{{'SETTINGS.PREFERENCES_TAB.ENABLE_LOGGING' | translate}}</span>
+          </label>
+
+          <div class="advanced-settings advanced-settings-logs" *ngIf="saveLogsCheckbox">
+            <div class="send-logs"
+                 (click)="sendLogsEml()"
+                 *ngIf="supportEmail">
+              {{'SETTINGS.PREFERENCES_TAB.REPORT_A_PROBLEM_EML' | translate}}
+
+            </div>
+            <div class="save-logs"
+                 (click)="sendLogsEmail()"
+                 *ngIf="supportEmail">
+              {{'SETTINGS.PREFERENCES_TAB.REPORT_A_PROBLEM_EMAIL' | translate}}
+            </div>
+            <div class="save-logs"
+                 (click)="downloadLogs()"
+            >
+              {{'SETTINGS.PREFERENCES_TAB.DOWNLOAD_LOGS' | translate}}
+            </div>
+          </div>
+<!--          -->
         </div>
 
         <div class="tab-content {{currentTab === TAB.PASSWORD ? '' : 'hidden'}}"
              ng-include=":: 'app/components/settings/templates/SettingsPassword.html'"
              ng-controller="ChangePasswordController">
+          <form name="loginForm" [formGroup]="changePasswordReactiveForm">
+
+
+            <div class="settings-item">
+              <span>{{'SETTINGS.PASSWORD_TAB.CURRENT' | translate}}</span>
+              <input class="default-input"
+                     type="password"
+                     autocomplete="off"
+                     name="currentPassword"
+                     formControlName="currentPassword"
+                     ng-change="onChangeCurrentPassword(changePasswordForm)">
+<!--              <div ng-messages="changePasswordForm.currentPassword.$error" ng-if="changePasswordForm.currentPassword.$dirty">-->
+<!--                <div ng-message="required" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.REQUIRED"></div>-->
+<!--                <div ng-message="bad" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.INVALID"></div>-->
+<!--              </div>-->
+            </div>
+
+            <div class="settings-item">
+              <span>{{'SETTINGS.PASSWORD_TAB.NEW' | translate}}</span>
+              <input class="default-input"
+                     type="password"
+                     autocomplete="off"
+                     formControlName="newPassword"
+                     ng-change="onChangeNewPassword(password.newPassword, changePasswordForm)">
+<!--              <div ng-messages="changePasswordForm.newPassword.$error" ng-if="changePasswordForm.newPassword.$dirty">-->
+<!--                <div ng-message="required" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.REQUIRED"></div>-->
+<!--                <div ng-message="matchError" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.DO_NOT_MATCH"></div>-->
+<!--              </div>-->
+            </div>
+
+            <div class="settings-item">
+              <span>{{'SETTINGS.PASSWORD_TAB.CONFIRM' | translate}}</span>
+              <input class="default-input"
+                     type="password"
+                     autocomplete="off"
+                     formControlName="confirmPassword"
+                     ng-change="onChangeNewPassword2(password.newPassword2, changePasswordForm)">
+<!--              <div ng-messages="changePasswordForm.newPassword2.$error" ng-if="changePasswordForm.newPassword2.$dirty">-->
+<!--                <div ng-message="required" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.REQUIRED"></div>-->
+<!--                <div ng-message="matchError" class="default-error" translate-once="SETTINGS.PASSWORD_TAB.ERROR.DO_NOT_MATCH"></div>-->
+<!--              </div>-->
+            </div>
+            <div class="settings-item" *ngIf="changePasswordReactiveForm.errors.passDoNotMatch">
+              <span>pass do not match</span>
+            </div>
+
+          </form>
+
+          <button (click)="changePassword()">change pass</button>
         </div>
       </div>
     </div>
